# teren

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.py
.github/workflows/: checks.yml
notebooks/: ad_hoc_experiments.ipynb  albations.ipynb  baseline_experiment.py  baseline_recon_experiment.py  clean_features_replication.ipynb  collect_observations.ipynb  data_preparation.ipynb  dir_act_jsd.ipynb  dir_act_jsd_auc.ipynb  dir_act_jsd_hist.ipynb  dir_act_jsd_hist_draft.ipynb  dir_act_jsd_hist_new.ipynb  dir_act_jsd_hist_new.py  dir_act_jsd_mat_draft.ipynb  draft_experiment.py  experiment_feature_dampening.ipynb  experiment_feature_dynamics.ipynb  experiment_modelling.ipynb  experiment_modelling_l1.ipynb  experiment_plateaus.ipynb  experiment_relation_to_mean.ipynb  experiment_removing_blowup.ipynb  experiment_sensitive_directions.ipynb  experiment_visualise_acts.ipynb  experiments.ipynb  explorations.ipynb  explorations_teren.ipynb  feature_experiments.ipynb  feature_explorations.ipynb  finding_early_blowups.ipynb  gemma_interference.ipynb  gemma_n_abl.ipynb  gemma_pert_many.ipynb  gemma_pert_real.ipynb  gemma_scope.ipynb  giorgi_experiment.py  investigate_early_blowups.py  jsd_lines.ipynb  jsd_process copy.ipynb  jsd_process.ipynb  (+29 more)
teren/: __init__.py  __main__.py  config.py  dir_act_utils.py  direction.py  dummy.py  experiment_context.py  lindsey_utils.py  measure.py  metric.py  perturbations.py  sae_examples.py  saes.py  typing.py  utils.py
teren/scripts/: __init__.py  core_experiment.py
tests/: test_dummy.py
