[project]
name = "teren"
dynamic = ["version"]
dependencies = [
    "beartype==0.18.5",
    "black[jupyter]==24.4.2",
    "datasets==2.20.0",
    "fancy-einsum==0.0.3",
    "ipykernel==6.29.5",
    "ipython==8.26.0",
    "ipywidgets==8.1.3",
    "isort==5.13.2",
    "jaxtyping==0.2.31",
    "matplotlib==3.9.1",
    "nbformat==5.10.4",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "plotly-express==0.4.1",
    "plotly==5.22.0",
    "pre-commit==3.7.1",
    "pytest==8.2.2",
    "sae-lens==3.12.0",
    "scipy==1.14.0",
    "torch==2.3.1",
    "tqdm==4.66.4",
    "transformer-lens @ git+https://github.com/jettjaniak/TransformerLens.git@beartype-optional",
    "transformers==4.42.3",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.dynamic]
version = {attr = "teren.__version__"}

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]